debug-storybook.log
[22:12:40.411] [INFO] storybook v10.2.13
[22:12:41.317] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook/main.js[39m file.

Original error:
[37m/.storybook/main.js:17
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)[39m[39m
    at loadMainConfig (file:///Users/dmytromalisevych/Desktop/%D0%92%D1%81%D1%96%20%D0%BF%D0%B0%D0%BF%D0%BA%D0%B8/%D0%A3%D0%BD%D1%96%D0%BA/%D0%A2%D1%80%D0%B5%D1%82%D1%96%D0%B8%CC%86%20%D0%BA%D1%83%D1%80%D1%81/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B8%CC%86%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D1%96%D1%8F%20%D1%82%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%9F%D0%97/%D0%BB%D0%B0%D0%B1%D0%B0%201/voting_system/node_modules/storybook/dist/_node-chunks/chunk-CUCNHZNT.js:11709:11)
    at async buildDevStandalone (file:///Users/dmytromalisevych/Desktop/%D0%92%D1%81%D1%96%20%D0%BF%D0%B0%D0%BF%D0%BA%D0%B8/%D0%A3%D0%BD%D1%96%D0%BA/%D0%A2%D1%80%D0%B5%D1%82%D1%96%D0%B8%CC%86%20%D0%BA%D1%83%D1%80%D1%81/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B8%CC%86%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D1%96%D1%8F%20%D1%82%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%9F%D0%97/%D0%BB%D0%B0%D0%B1%D0%B0%201/voting_system/node_modules/storybook/dist/core-server/index.js:7552:16)
    at async withTelemetry (file:///Users/dmytromalisevych/Desktop/%D0%92%D1%81%D1%96%20%D0%BF%D0%B0%D0%BF%D0%BA%D0%B8/%D0%A3%D0%BD%D1%96%D0%BA/%D0%A2%D1%80%D0%B5%D1%82%D1%96%D0%B8%CC%86%20%D0%BA%D1%83%D1%80%D1%81/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B8%CC%86%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D1%96%D1%8F%20%D1%82%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%9F%D0%97/%D0%BB%D0%B0%D0%B1%D0%B0%201/voting_system/node_modules/storybook/dist/_node-chunks/chunk-WGZQUMPK.js:218:12)
    at async dev (file:///Users/dmytromalisevych/Desktop/%D0%92%D1%81%D1%96%20%D0%BF%D0%B0%D0%BF%D0%BA%D0%B8/%D0%A3%D0%BD%D1%96%D0%BA/%D0%A2%D1%80%D0%B5%D1%82%D1%96%D0%B8%CC%86%20%D0%BA%D1%83%D1%80%D1%81/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B8%CC%86%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D1%96%D1%8F%20%D1%82%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%9F%D0%97/%D0%BB%D0%B0%D0%B1%D0%B0%201/voting_system/node_modules/storybook/dist/bin/core.js:2734:3)
    at async _Command.<anonymous> (file:///Users/dmytromalisevych/Desktop/%D0%92%D1%81%D1%96%20%D0%BF%D0%B0%D0%BF%D0%BA%D0%B8/%D0%A3%D0%BD%D1%96%D0%BA/%D0%A2%D1%80%D0%B5%D1%82%D1%96%D0%B8%CC%86%20%D0%BA%D1%83%D1%80%D1%81/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B8%CC%86%20%D1%81%D0%B5%D0%BC%D0%B5%D1%81%D1%82%D1%80/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D0%B8%D0%B7%D0%B0%D1%86%D1%96%D1%8F%20%D1%82%D0%B0%20%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D1%83%D0%B2%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%9F%D0%97/%D0%BB%D0%B0%D0%B1%D0%B0%201/voting_system/node_modules/storybook/dist/bin/core.js:2803:92)
[22:12:41.324] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[22:12:41.326] [WARN]   Failed to load preset: "/Users/dmytromalisevych/Desktop/Всі папки/Унік/Третій курс/Другий семестр/Стандартизація та документування ПЗ/лаба 1/voting_system/.storybook/main.js"
[22:12:41.328] [ERROR] ./.storybook/main.js:17
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1512:18)
    at Module._compile (node:internal/modules/cjs/loader:1534:20)
    at Object..js (node:internal/modules/cjs/loader:1699:10)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
    at cjsLoader (node:internal/modules/esm/translators:263:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:196:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:271:25)